<resources>
    <string name="app_name">RETROWARE</string>
    <string name="app_version">2.0</string>
    <string name="bienvenido">BIENVENIDO/A</string>
    <string name="btnInfo">App Info.</string>
    <string name="usuario">Indroduzca el nombre de usuario</string>
    <string name="version">%s estás usando la versión %s de %s</string>
    <string name="app_info">Descripción de la aplicaión:</string>
    <string name="descripcion">Your imageboard to share and download the best abandonware.</string>
    <string name="error">No se encontraron apps instaladas para enviar correos.</string>
    <string name="email_contacto">RETROWARE@gmail.com</string>
    <string name="email_asunto">Consulta de la app RETROWARE</string>
    <string name="email_cuerpo">Escriba a que la consulta que desee realizar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_home">Home</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_setting">Setting</string>

</resources>