<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/miazul">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="top">

        <TextView
            android:id="@+id/mensajeVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/version"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/miazulClaro"
            tools:context=".MainActivity"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tituloInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/app_info"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            tools:context=".MainActivity"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/mensajeInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/descripcion"
            android:textColor="@color/white"
            tools:context=".MainActivity"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/contactarButton"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="end"
            android:text="Contactar"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints"
            android:theme="@style/Button.White"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="146dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>